--- a/style/scss/sections/_hero.scss
+++ b/style/scss/sections/_hero.scss
@@ -46,7 +46,7 @@
 	&__subtitle {
 		font-size: $text-md-desktop;
 		color: rgba($text-inverse, 0.6);
-		line-height: auto;
+		line-height: 1.2;
 	}
 
 	&__item-block {
