--- a/style/scss/sections/_requirements.scss
+++ b/style/scss/sections/_requirements.scss
@@ -58,7 +58,7 @@
 			grid-column: 4 / 6;
 
 
-			.requirements__block p {
+			p {
 				color: $text-medium;
 				font-size: $text-md-desktop;
 				max-width: 377px;
