--- a/style/scss/abstracts/_mixins.scss
+++ b/style/scss/abstracts/_mixins.scss
@@ -1,13 +1,13 @@
 @mixin headline {
 	font-family: 'Golos Text', sans-serif;
 	font-weight: 500;
-	line-height: 100%;
+	line-height: 1;
 	letter-spacing: -0.04em;
 }
 
 @mixin text {
 	font-family: 'Golos Text', sans-serif;
 	font-weight: 400;
-	line-height: 95%;
+	line-height: 0.95;
 	letter-spacing: 0;
 }
