--- a/style/scss/abstracts/_variables.scss
+++ b/style/scss/abstracts/_variables.scss
@@ -36,7 +36,7 @@ $radius-s-mobile: 14px;
 $radius-md-mobile: 18px;
 $radius-lg-mobile: 20px;
 $radius-xl-mobile: 28px;
-$radius-max-mobile: 999;
+$radius-max-mobile: 999px;
 
 // ===== ОТСТУПЫ
 
