--- a/style/scss/base/_reset.scss
+++ b/style/scss/base/_reset.scss
@@ -27,12 +27,6 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/* Сброс роли отображения HTML5 для старых браузеров */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
 body {
     line-height: 1;
     -webkit-font-smoothing: antialiased;
@@ -63,14 +57,14 @@ a {
     color: inherit;
 }
 
-button, input, textarea, select {
-    font-family: inherit;
+button {
     border: none;
     background: transparent;
-    padding: 0;
-    margin: 0;
-    outline: none;
     cursor: pointer;
+}
+
+input, textarea, select {
+    font-family: inherit;
 }
 
 img, video, iframe {
