--- a/style/scss/components/_feedback-modal.scss
+++ b/style/scss/components/_feedback-modal.scss
@@ -14,7 +14,7 @@
 	z-index: 2000;
 	opacity: 0;
 	visibility: hidden;
-	transition: all 0.3s ease;
+	transition: opacity 0.3s ease, visibility 0.3s ease;
 
 	&--visible {
 		opacity: 1;
@@ -29,7 +29,7 @@
 		max-width: 432px;
 		position: relative;
 		transform: scale(0.9);
-		transition: transform 0.3s ease;
+		transition: opacity 0.3s ease, visibility 0.3s ease;
 
 		.feedback-modal--visible & {
 			transform: scale(1);
