fix training background

--- a/style/scss/sections/_training.scss
+++ b/style/scss/sections/_training.scss
@@ -2,7 +2,7 @@
 
 .training {
 	background-color: $text-default;
-	background-image: url('../../../image/training/bottom.webp');
+	background-image: url('../../image/training/bottom.webp');
 	background-size: 100% auto;
 	background-position: bottom;
 	background-repeat: no-repeat;
