fix background again

--- a/style/scss/sections/_requirements.scss
+++ b/style/scss/sections/_requirements.scss
@@ -2,7 +2,7 @@
 
 .requirements {
 	background-color: $background;
-	background-image: url('../../../image/requirements/Subtract.png');
+	background-image: url('/image/requirements/Subtract.png');
 	background-size: 100% auto;
 	background-position: bottom;
 	background-repeat: no-repeat;
