--- a/style/scss/sections/_address.scss
+++ b/style/scss/sections/_address.scss
@@ -2,7 +2,7 @@
 @use '../abstracts/mixins' as *;
 
 .address {
-	background-image: url('/image/payments/Subtract.png');
+	background-image: url('../../image/payments/Subtract.png');
 	background-size: 100% auto;
 	background-position: top;
 	background-repeat: no-repeat;
