--- a/style/scss/sections/_payments.scss
+++ b/style/scss/sections/_payments.scss
@@ -5,7 +5,7 @@
 
 .payments {
 	background-color: $background;
-	background-image: url('/image/payments/Subtract.png');
+	background-image: url('../../image/payments/Subtract.png');
 	background-size: 100% auto;
 	background-position: bottom;
 	background-repeat: no-repeat;
