--- a/style/scss/sections/_payments.scss
+++ b/style/scss/sections/_payments.scss
@@ -4,11 +4,21 @@
 
 
 .payments {
-	background-color: $background;
-	background-image: url('../../image/payments/Subtract.png');
-	background-size: 100% auto;
-	background-position: bottom;
-	background-repeat: no-repeat;
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		transform: translateX(-50%);
+
+		width: 100vw;
+		height: 246px;
+
+		background: url('../../image/payments/Subtract.png') center / cover no-repeat;
+		pointer-events: none;
+	}
 
 	&__container {
 		padding: $spacing-none-desktop $spacing-xxxl-desktop 246px;
