--- a/style/scss/sections/_requirements.scss
+++ b/style/scss/sections/_requirements.scss
@@ -1,11 +1,21 @@
 @use "../abstracts/variables" as *;
 
 .requirements {
-	background-color: $background;
-	background-image: url('../../image/requirements/Subtract.png');
-	background-size: 100% auto;
-	background-position: bottom;
-	background-repeat: no-repeat;
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		transform: translateX(-50%);
+
+		width: 100vw;
+		height: 246px;
+
+		background: url('../../image/requirements/Subtract.png') center / cover no-repeat;
+		pointer-events: none;
+	}
 
 	&__title {
 		color: $text-default;
