--- a/style/scss/sections/_faq.scss
+++ b/style/scss/sections/_faq.scss
@@ -33,6 +33,9 @@
 			padding: $spacing-lg-desktop;
 			cursor: pointer;
 			transition: background-color 0.2s;
+			display: flex;
+			flex-direction: column;
+			gap: 12px;
 
 			& p {
 				display: none;
@@ -43,7 +46,6 @@
 			&.is-open {
 				p {
 					display: block;
-					margin-top: $spacing-md-desktop;
 					animation: fadeIn 0.3s ease;
 				}
 			}
@@ -56,7 +58,7 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			margin-bottom: $spacing-xs-desktop;
+			margin-bottom: 0;
 			gap: $spacing-xs-desktop;
 
 			& h6 {
